# 99-haskell

./: 99-haskell-exercises.cabal  README.md  Setup.hs
src/: exs.hs
tests/: Main.hs
